fix layout issues and clean up code

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
 }
 
 .text-input {
-    flex-grow: 1;
+    flex: 1;
     padding: 0.5em;
     font-size: 1em;
     border: none;
@@ -80,6 +80,7 @@ body {
 }
 
 .timer {
+    flex: 0;
     display: inline-block;
     width: 50px;
     text-align: right;
@@ -88,7 +89,6 @@ body {
 
 .time-column .row-container > div,
 .timer {
-    display: flex;
     padding: 0 5px;
     white-space: nowrap;
 }
